Arreglos en validaciones de usuario, manejador de excepciones y cambiada version de spring boot