@@ -11,7 +11,6 @@ import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
-import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.NoSuchElementException;
 
@@ -27,14 +26,23 @@ import java.util.NoSuchElementException;
 @Slf4j
 @ControllerAdvice
 public class ManejadorGlobalExcepciones {
-    private static final Map<String, String> PATRONES_ERROR_INTEGRIDAD;
 
-    static {
-        PATRONES_ERROR_INTEGRIDAD = new LinkedHashMap<>();
-        PATRONES_ERROR_INTEGRIDAD.put("Rol_nombre_key", "Error en RolService.crearRol: Nombre duplicado introducido");
-        PATRONES_ERROR_INTEGRIDAD.put("Usuario_email_key", "Error en UsuarioService: Email duplicado introducido");
-        PATRONES_ERROR_INTEGRIDAD.put("Usuario_telefono_key", "Error en UsuarioService: Teléfono duplicado introducido");
-    }
+    private static final Map<String, String> ERRORES = Map.of(
+            "crearRol", "Error en RolService.crearRol: ",
+            "actualizarRol", "Error en RolService.actualizarRol: ",
+            "crearUsuario", "Error en UsuarioService.crearUsuario: ",
+            "actualizarUsuario", "Error en UsuarioService.actualizarUsuario: ",
+            "crearCategoria", "Error en CategoriaService.crearCategoria: ",
+            "actualizarCategoria", "Error en CategoriaService.actualizarCategoria: ",
+            "Rol_nombre_key", "Nombre duplicado introducido",
+            "Usuario_email_key", "Email duplicado introducido",
+            "Usuario_telefono_key", "Teléfono duplicado introducido",
+            "Categoria_nombre_key", "Nombre duplicado introducido"
+    );
+
+    // ========================
+    // Métodos ExceptionHandler
+    // ========================
 
     /**
      * Maneja la excepción NoResultException.
@@ -63,7 +71,7 @@ public class ManejadorGlobalExcepciones {
     /**
      * Maneja la excepción MethodArgumentNotValidException.
      * Se lanza cuando la validación de los argumentos de un método falla,
-     * normalmente por anotaciones de validación en los DTOs (por ejemplo, @NotNull, @Email).
+     * normalmente por anotaciones de validación en los DTOs (por ejemplo @NotNull, @Email, @Pattern).
      *
      * @param e La excepción capturada.
      * @return Una respuesta HTTP 400 Bad Request.
@@ -71,35 +79,14 @@ public class ManejadorGlobalExcepciones {
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<Void> manejadorMethodArgumentNotValidException(MethodArgumentNotValidException e) {
         String mensaje = e.getMessage();
-
-        if (mensaje.contains("crearRol")) {
-            log.error("Error en RolService.crearRol: [nombre: no debe estar vacío ni nulo] ");
-        } else if (mensaje.contains("crearUsuario")) {
-            StringBuilder errores = new StringBuilder();
-
-            for (FieldError error : e.getBindingResult().getFieldErrors()) {
-                errores.append("[").append(error.getField()).append(": ").append(error.getDefaultMessage()).append("] ");
-            }
-
-            log.error("Error en UsuarioService.crearUsuario: " + errores.toString().trim());
-        } else if (mensaje.contains("actualizarUsuario")) {
-            StringBuilder errores = new StringBuilder();
-
-            for (FieldError error : e.getBindingResult().getFieldErrors()) {
-                errores.append("[").append(error.getField()).append(": ").append(error.getDefaultMessage()).append("] ");
-            }
-
-            log.error("Error en UsuarioService.actualizarUsuario: " + errores.toString().trim());
-        } else {
-            log.error(mensaje);
-        }
-
+        String errores = construirErroresValidacion(e);
+        log.error(obtenerMensajePersonalizado(mensaje, errores));
         return ResponseEntity.badRequest().build();
     }
 
     /**
      * Maneja la excepción DataIntegrityViolationException.
-     * Se controla cuando se intenta crear un objeto de una tabla con algun
+     * Se controla cuando se intenta crear un objeto de una tabla con algún
      * dato que viola restricciones de integridad.
      *
      * @param e La excepción capturada.
@@ -107,20 +94,10 @@ public class ManejadorGlobalExcepciones {
      */
     @ExceptionHandler(DataIntegrityViolationException.class)
     public ResponseEntity<Void> manejadorDataIntegrityViolationException(DataIntegrityViolationException e) {
-        boolean encontrado = false;
-
-        for (Map.Entry<String, String> entry : PATRONES_ERROR_INTEGRIDAD.entrySet()) {
-            if (e.getMessage().contains(entry.getKey())) {
-                log.error(entry.getValue());
-                encontrado = true;
-                break;
-            }
-        }
-
-        if (!encontrado) {
-            log.error(e.getMessage());
-        }
-
+        String mensaje = e.getMessage();
+        String claseMetodo = obtenerClaseMetodoDesdeStackTrace(e.getStackTrace());
+        String logMsg = obtenerMensajePersonalizado(mensaje, null);
+        log.error("Error en {}: {}", claseMetodo, logMsg);
         return ResponseEntity.badRequest().build();
     }
 
@@ -132,16 +109,20 @@ public class ManejadorGlobalExcepciones {
      * @param e La excepción capturada.
      * @return Una respuesta HTTP 400 Bad Request.
      */
-
     @ExceptionHandler(HttpMessageNotReadableException.class)
     public ResponseEntity<Void> manejadorHttpMessageNotReadableException(HttpMessageNotReadableException e) {
         Throwable causa = e.getMostSpecificCause();
         String metodo = e.getStackTrace().length > 0 ? e.getStackTrace()[0].getMethodName() : "desconocido";
+        log.error("Causa: {}, Mensaje: {}", causa.getClass().getName(), causa.getMessage());
 
-        if (causa instanceof InvalidFormatException ife && !ife.getPath().isEmpty()) {
-            String campo = ife.getPath().get(0).getFieldName();
-            String tipo = ife.getTargetType().getSimpleName();
-            log.error("Excepción en método '{}': Error de formato en el campo '{}', tipo esperado '{}'. Detalle: {}", metodo, campo, tipo, causa.getMessage());
+        if (causa instanceof InvalidFormatException ife) {
+            if (!ife.getPath().isEmpty()) {
+                String campo = ife.getPath().getFirst().getFieldName();
+                String tipo = ife.getTargetType().getSimpleName();
+                log.error("Excepción en método '{}': Error de formato en el campo '{}', tipo esperado '{}'. Detalle: {}", metodo, campo, tipo, causa.getMessage());
+            } else {
+                log.error("Excepción en método '{}': InvalidFormatException sin path. Detalle: {}", metodo, causa.getMessage());
+            }
         } else {
             log.error("Excepción en método '{}': Error de formato en los datos recibidos. Detalle: {}", metodo, causa.getMessage());
         }
@@ -158,5 +139,64 @@ public class ManejadorGlobalExcepciones {
     public ResponseEntity<Void> manejadoreGeneralException(Exception e) {
         log.error(e.getMessage());
         return ResponseEntity.internalServerError().build();
+    }
+
+    // ================
+    // Métodos Privados
+    // ================
+
+    /**
+     * Método auxiliar para construir un mensaje de error detallado
+     * a partir de una excepción MethodArgumentNotValidException.
+     *
+     * @param e La excepción capturada.
+     * @return Una cadena con los detalles de los errores de validación.
+     */
+    private String construirErroresValidacion(MethodArgumentNotValidException e) {
+        StringBuilder errores = new StringBuilder();
+
+        for (FieldError error : e.getBindingResult().getFieldErrors()) {
+            errores.append("[").append(error.getField()).append(": ").append(error.getDefaultMessage()).append("] ");
+        }
+
+        return errores.toString().trim();
+    }
+
+    /**
+     * Método auxiliar para obtener la clase y el método
+     * desde el stack trace de una excepción.
+     *
+     * @param stackTrace El stack trace de la excepción.
+     * @return Una cadena con el formato "Clase.Método" o "desconocido" si no se encuentra.
+     */
+    private String obtenerClaseMetodoDesdeStackTrace(StackTraceElement[] stackTrace) {
+        for (StackTraceElement ste : stackTrace) {
+            String className = ste.getClassName();
+
+            // Filtrar solo las clases del paquete de la aplicación, excluyendo excepciones y clases internas
+            if (className.startsWith("es.nullpointers.eventvsmerida") && !className.contains("exception") && !className.contains("$")) {
+                return className.substring(className.lastIndexOf('.') + 1) + "." + ste.getMethodName();
+            }
+        }
+
+        return "desconocido";
+    }
+
+    /**
+     * Método auxiliar para obtener un mensaje personalizado
+     * basado en el mensaje original y un mapa de errores conocidos.
+     *
+     * @param mensaje El mensaje original de la excepción.
+     * @param errores Detalles adicionales de errores, si los hay.
+     * @return Un mensaje personalizado si se encuentra una coincidencia, o el mensaje original.
+     */
+    private String obtenerMensajePersonalizado(String mensaje, String errores) {
+        for (Map.Entry<String, String> entry : ERRORES.entrySet()) {
+            if (mensaje.contains(entry.getKey())) {
+                return entry.getValue() + (errores != null ? errores : "");
+            }
+        }
+
+        return mensaje;
     }
 }
